plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.2'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'dev.sezrr.examples'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.8.5'
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.2'
    implementation group: 'org.springframework.boot', name: 'spring-boot-docker-compose', version: '3.4.3'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '3.4.3'
    implementation 'com.github.f4b6a3:uuid-creator:6.0.0'
    testImplementation group: 'org.springframework.modulith', name: 'spring-modulith-starter-test', version: '1.3.3'
    implementation group: 'org.springframework.modulith', name: 'spring-modulith-starter-core', version: '1.3.3'
    implementation group: 'org.springframework.modulith', name: 'spring-modulith-api', version: '1.3.3'
    implementation group: 'org.springframework.modulith', name: 'spring-modulith-core', version: '1.3.3'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '3.4.3'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    implementation("org.springframework.security:spring-security-core:6.4.4")
    implementation("org.springframework.security:spring-security-oauth2-authorization-server:1.4.2")
    implementation("org.keycloak:keycloak-admin-client:26.0.4")
}

tasks.named('test') {
    useJUnitPlatform()
}
